--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -220,3 +220,35 @@ jobs:
             **/target/test/
             **/target/test-reports/**
             **/target/unit-tests.log
+
+  verifier:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 8
+          - 11
+          - 17
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          cache: maven
+          check-latest: false
+      - name: Test with Maven
+        run: |
+          PROFILES="-Pgoogle-mirror,verifier"
+          TEST_MODULES="verifier"
+          build/mvn $PROFILES -pl $TEST_MODULES -am clean install -DskipTests
+      - name: Upload test log
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: verifier-java-${{ matrix.java }}-unit-test-log
+          path: |
+            **/target/test-reports/**
+            **/target/unit-tests.log
