--- a/.github/workflows/sbt.yml
+++ b/.github/workflows/sbt.yml
@@ -259,6 +259,34 @@ jobs:
             **/target/test-reports/**
             **/target/unit-tests.log
 
+    verifier:
+      runs-on: ubuntu-22.04
+      strategy:
+        fail-fast: false
+        matrix:
+          java:
+            - 8
+            - 11
+      steps:
+        - uses: actions/checkout@v4
+        - name: Setup JDK ${{ matrix.java }}
+          uses: actions/setup-java@v4
+          with:
+            distribution: zulu
+            java-version: ${{ matrix.java }}
+            check-latest: false
+        - name: Test with SBT
+          run: |
+            build/sbt -Pverifier "clean; celeborn-verifier/package"
+        - name: Upload test log
+          if: failure()
+          uses: actions/upload-artifact@v4
+          with:
+            name: verifier-java-${{ matrix.java }}-unit-test-log
+            path: |
+              **/target/test-reports/**
+              **/target/unit-tests.log
+
   openapi-codegen-check:
     runs-on: ubuntu-22.04
     strategy:
