--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -55,3 +55,4 @@ jobs:
           build/mvn spotless:check -Pgoogle-mirror,spark-2.4
           build/mvn spotless:check -Pgoogle-mirror,spark-3.3
           build/mvn spotless:check -Pgoogle-mirror,mr
+          build/mvn spotless:check -Pgoogle-mirror,verifier
