[CELEBORN-1809][CIP-14] Add partitionLocation to cppClient

--- a/cpp/celeborn/protocol/tests/CMakeLists.txt
+++ b/cpp/celeborn/protocol/tests/CMakeLists.txt
@@ -12,8 +12,23 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-add_subdirectory(proto)
-add_subdirectory(memory)
-add_subdirectory(utils)
-add_subdirectory(conf)
-add_subdirectory(protocol)
+
+add_executable(celeborn_protocol_test PartitionLocationTest.cpp)
+
+add_test(NAME celeborn_protocol_test COMMAND celeborn_protocol_test)
+
+target_include_directories(protocol PUBLIC ${CMAKE_BINARY_DIR})
+
+target_link_libraries(
+        celeborn_protocol_test
+        PRIVATE
+        memory
+        proto
+        protocol
+        utils
+        ${FOLLY_WITH_DEPENDENCIES}
+        ${GLOG}
+        ${GFLAGS_LIBRARIES}
+        GTest::gtest
+        GTest::gmock
+        GTest::gtest_main)
