--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -90,6 +90,7 @@ jobs:
           - 'flink-1.19'
           - 'flink-1.20'
           - 'mr'
+          - 'tez'
     steps:
     - uses: actions/checkout@v4
     - name: Setup JDK 8
