[CELEBORN-1737] Support build tez client package
### What changes were proposed in this pull request?
Add Tez packaging script.

### Why are the changes needed?
To support build tez client.

### Does this PR introduce _any_ user-facing change?
Yes, enable Celeborn with tez support.

### How was this patch tested?
Cluster test.

Closes #3028 from GH-Gloway/1737.

Lead-authored-by: hongguangwei <hongguangwei@bytedance.com>
Co-authored-by: mingji <fengmingxiao.fmx@alibaba-inc.com>
Signed-off-by: mingji <fengmingxiao.fmx@alibaba-inc.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1822,10 +1822,11 @@
       <id>tez</id>
       <modules>
         <module>client-tez/tez</module>
+        <module>client-tez/tez-shaded</module>
         <module>tests/tez-it</module>
       </modules>
       <properties>
-        <tez.version>0.10.3</tez.version>
+        <tez.version>0.10.2</tez.version>
       </properties>
       <dependencyManagement>
         <dependencies>
