[CELEBORN-1477][FOLLOWUP] Minor fix for v1 RESTful apis before release
### What changes were proposed in this pull request?

Minor fix the v1 RESTful apis before 0.6.0 release.

1. update  the API description to use UPPER case worker EventType
2. `subResourceConsumption`  => `subResourceConsumptions`.

### Why are the changes needed?
1. With https://github.com/apache/celeborn/pull/2754, the openapi-sdk works well. but for the RESTful call without SDK, the worker eventType is still case sensitive, might be caused by the jersey issue mentioned in https://github.com/eclipse-ee4j/jersey/issues/5288. So, In this PR, I change the description in the swagger for user guidance.
<img width="1524" alt="image" src="https://github.com/user-attachments/assets/70e4f239-dc36-47bc-902e-5340986f014a" />

2. rename `subResourceConsumption`  to `subResourceConsumptions`.

### Does this PR introduce _any_ user-facing change?
No, the api has not been released.

### How was this patch tested?
GA.

Closes #3023 from turboFei/restful_minor_fix.

Authored-by: Wang, Fei <fwang12@ebay.com>
Signed-off-by: Shuang <lvshuang.xjs@alibaba-inc.com>

--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -172,7 +172,7 @@ paths:
       operationId: workerExit
       description: |
         Trigger this worker to exit.
-        Legal exit types are 'Decommission', 'Graceful' and 'Immediately'.
+        Legal exit types are 'DECOMMISSION', 'GRACEFUL' and 'IMMEDIATELY'.
       requestBody:
         content:
           application/json:
@@ -574,7 +574,7 @@ components:
         hdfsFileCount:
           type: integer
           format: int64
-        subResourceConsumption:
+        subResourceConsumptions:
           type: object
           additionalProperties:
             $ref: '#/components/schemas/WorkerResourceConsumption'
