--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -212,7 +212,7 @@ paths:
       operationId: sendWorkerEvent
       description: |
         For Master(Leader) can send worker event to manager workers.
-        Legal types are 'None', 'Immediately', 'Decommission', 'DecommissionThenIdle', 'Graceful', 'Recommission'.
+        Legal types are 'NONE', 'IMMEDIATELY', 'DECOMMISSION', 'DECOMMISSIONTHENIDLE', 'GRACEFUL', 'RECOMMISSION'.
       requestBody:
         content:
           application/json:
@@ -863,7 +863,7 @@ components:
         hdfsFileCount:
           type: integer
           format: int64
-        subResourceConsumption:
+        subResourceConsumptions:
           type: object
           additionalProperties:
             $ref: '#/components/schemas/WorkerResourceConsumption'
