--- a/cpp/celeborn/protocol/tests/CMakeLists.txt
+++ b/cpp/celeborn/protocol/tests/CMakeLists.txt
@@ -16,7 +16,8 @@
 add_executable(
         celeborn_protocol_test
         PartitionLocationTest.cpp
-        TransportMessageTest.cpp)
+        TransportMessageTest.cpp
+        ControlMessagesTest.cpp)
 
 add_test(NAME celeborn_protocol_test COMMAND celeborn_protocol_test)
 
