[CELEBORN-1836][CIP-14] Add Message to cppClient

--- a/cpp/celeborn/protocol/CMakeLists.txt
+++ b/cpp/celeborn/protocol/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(
         protocol
         memory
         proto
+        utils
         ${FOLLY_WITH_DEPENDENCIES}
         ${GLOG}
         ${GFLAGS_LIBRARIES}
