--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <module>master</module>
     <module>worker</module>
     <module>cli</module>
+    <module>verifier</module>
   </modules>
 
   <distributionManagement>
