--- a/cpp/celeborn/network/tests/CMakeLists.txt
+++ b/cpp/celeborn/network/tests/CMakeLists.txt
@@ -17,7 +17,8 @@ add_executable(
         celeborn_network_test
         FrameDecoderTest.cpp
         MessageTest.cpp
-        MessageDispatcherTest.cpp)
+        MessageDispatcherTest.cpp
+        TransportClientTest.cpp)
 
 add_test(NAME celeborn_network_test COMMAND celeborn_network_test)
 
@@ -25,6 +26,7 @@ target_link_libraries(
         celeborn_network_test
         PRIVATE
         memory
+        conf
         proto
         protocol
         network
