[CELEBORN-1871][CIP-14] Add NettyRpcEndpointRef to cppClient

--- a/cpp/celeborn/network/CMakeLists.txt
+++ b/cpp/celeborn/network/CMakeLists.txt
@@ -17,7 +17,8 @@ add_library(
         STATIC
         Message.cpp
         MessageDispatcher.cpp
-        TransportClient.cpp)
+        TransportClient.cpp
+        NettyRpcEndpointRef.cpp)
 
 target_include_directories(network PUBLIC ${CMAKE_BINARY_DIR})
 
