Support get workers topology

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -984,7 +984,7 @@ components:
       properties:
         topologies:
           type: array
-          description: The worker topologies.
+          description: The workers topology information.
           items:
             $ref: '#/components/schemas/TopologyInfo'
 
