[CELEBORN-1875] Support to get workers topology information with RESTful api
### What changes were proposed in this pull request?

Support to get the workers topology information with RESTful api.
1. return networkLocation in WorkerData
2. add new api `/api/v1/workers/topology` to return the grouped workers topology info.

### Why are the changes needed?

1. To get the workers topology information.
2. To know the rack awareness well.

### Does this PR introduce _any_ user-facing change?

No break change.
### How was this patch tested?
UT and IT.

<img width="1008" alt="image" src="https://github.com/user-attachments/assets/6cb1aa2a-1160-4570-acb1-7602e2ce0b09" />

<img width="719" alt="image" src="https://github.com/user-attachments/assets/d26c3326-4837-40ad-a344-3cb4204bf607" />

Closes #3112 from turboFei/topology.

Authored-by: Wang, Fei <fwang12@ebay.com>
Signed-off-by: SteNicholas <programgeek@163.com>

--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -226,6 +226,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
+  /api/v1/workers/topology:
+    get:
+      tags:
+        - Worker
+      operationId: getWorkersTopology
+      description: List all worker topology info of the master.
+      responses:
+        "200":
+          description: The request was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TopologyResponse'
+
   /api/v1/applications:
     get:
       tags:
@@ -841,6 +855,9 @@ components:
           type: integer
           format: int64
           description: The start time of the worker state.
+        networkLocation:
+          type: string
+          description: The network location of the worker.
       required:
         - host
         - rpcPort
@@ -949,6 +966,27 @@ components:
           description: The worker events.
           items:
             $ref: '#/components/schemas/WorkerEventData'
+
+    TopologyInfo:
+      type: object
+      properties:
+        networkLocation:
+          type: string
+          description: The network location.
+        workers:
+          type: array
+          description: The workers in the network location.
+          items:
+            type: string
+
+    TopologyResponse:
+      type: object
+      properties:
+        topologies:
+          type: array
+          description: The workers topology information.
+          items:
+            $ref: '#/components/schemas/TopologyInfo'
 
     WorkerId:
       type: object
