[CELEBORN-1906][CIP-14] Add CelebornInputStream to cppClient

--- a/cpp/celeborn/client/CMakeLists.txt
+++ b/cpp/celeborn/client/CMakeLists.txt
@@ -14,7 +14,8 @@
 # limitations under the License.
 add_library(
         client
-        reader/WorkerPartitionReader.cpp)
+        reader/WorkerPartitionReader.cpp
+        reader/CelebornInputStream.cpp)
 
 target_include_directories(client PUBLIC ${CMAKE_BINARY_DIR})
 
