--- a/master/pom.xml
+++ b/master/pom.xml
@@ -199,5 +199,20 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>aliyun</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-aliyun</artifactId>
+          <version>${hadoop.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>com.aliyun.oss</groupId>
+          <artifactId>aliyun-sdk-oss</artifactId>
+          <version>${aliyun-sdk-oss.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 </project>
