--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -153,5 +153,15 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>aliyun</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.celeborn</groupId>
+          <artifactId>celeborn-multipart-uploader-oss_${scala.binary.version}</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 </project>
