CELEBORN-1900 use correct step name for version

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Download Celeborn Release
         run: |
-          VERSION="${{ steps.extract_version.outputs.VERSION }}"
+          VERSION="${{ steps.set_version.outputs.VERSION }}"
           wget https://downloads.apache.org/celeborn/celeborn-${VERSION}/apache-celeborn-${VERSION}-bin.tgz
           tar -xzf apache-celeborn-${VERSION}-bin.tgz
 
