--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build and Push
         run: |
-          VERSION="${{ steps.extract_version.outputs.VERSION }}"
+          VERSION="${{ steps.set_version.outputs.VERSION }}"
           cd apache-celeborn-${VERSION}-bin
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           docker buildx create --use
