--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         ./dev/dependencies.sh --sbt --module ${{ matrix.module }} --check
 
-  maven:
+  maven-jdk8:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -99,3 +99,23 @@ jobs:
     - name: Maven Check dependency list
       run: |
         ./dev/dependencies.sh --module ${{ matrix.module }} --check
+
+  maven-jdk11:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        module:
+          - 'flink-2.0'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 11
+          cache: maven
+          check-latest: false
+      - name: Maven Check dependency list
+        run: |
+          ./dev/dependencies.sh --module ${{ matrix.module }} --check
