--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -146,7 +146,7 @@ jobs:
           **/target/test-reports/**
           **/target/unit-tests.log
 
-  flink:
+  flink1:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -160,6 +160,40 @@ jobs:
           - '1.18'
           - '1.19'
           - '1.20'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          cache: maven
+          check-latest: false
+      - name: Test with Maven
+        run: |
+          PROFILES="-Pgoogle-mirror,flink-${{ matrix.flink }}"
+          TEST_MODULES="client-flink/common,client-flink/flink-${{ matrix.flink }},client-flink/flink-${{ matrix.flink }}-shaded,tests/flink-it"
+          build/mvn $PROFILES -pl $TEST_MODULES -am clean install -DskipTests
+          build/mvn $PROFILES -pl $TEST_MODULES test
+      - name: Upload test log
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flink-${{ matrix.flink }}-java-${{ matrix.java }}-unit-test-log
+          path: |
+            **/target/test-reports/**
+            **/target/unit-tests.log
+
+  flink2:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 11
+          - 17
+        flink:
+          - '2.0'
     steps:
       - uses: actions/checkout@v4
       - name: Setup JDK ${{ matrix.java }}
