--- a/.github/workflows/sbt.yml
+++ b/.github/workflows/sbt.yml
@@ -196,7 +196,7 @@ jobs:
               **/target/test-reports/**
               **/target/unit-tests.log
 
-  flink:
+  flink1:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -229,6 +229,36 @@ jobs:
             path: |
                 **/target/test-reports/**
                 **/target/unit-tests.log
+
+  flink2:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        java:
+          - 11
+          - 17
+        flink:
+          - '2.0'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK ${{ matrix.java }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: ${{ matrix.java }}
+          check-latest: false
+      - name: Test with SBT
+        run: |
+          build/sbt -Pflink-${{ matrix.flink }} "clean; celeborn-flink-group/test"
+      - name: Upload test log
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flink-${{ matrix.flink }}-java-${{ matrix.java }}-unit-test-log
+          path: |
+            **/target/test-reports/**
+            **/target/unit-tests.log
 
   mr:
     runs-on: ubuntu-22.04
