--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -16,19 +16,18 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-
-name: "Pull Request Labeler"
-on: pull_request_target
-
-permissions:
-  contents: read
-  pull-requests: write
+name: Pull Request Labeler
+on:
+  - pull_request_target
 
 jobs:
-  triage:
-    runs-on: ubuntu-24.04
+  labeler:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-    - uses: actions/labeler@v5
-      with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        sync-labels: true
+      - uses: actions/labeler@v5
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          sync-labels: true
