--- a/charts/celeborn/templates/master/service.yaml
+++ b/charts/celeborn/templates/master/service.yaml
@@ -16,7 +16,7 @@ limitations under the License.
 */ -}}
 
 {{ if .Values.additionalNodePortServicePerReplica.enabled }}
-{{ range  $i, $e := until (int .Values.masterReplicas) }}
+{{ range  $i, $e := until (int .Values.master.replicas) }}
 ---
 apiVersion: v1
 kind: Service
