--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -41,11 +41,6 @@ image:
 # -- Image pull secrets for private image registry
 imagePullSecrets: []
 
-# -- Specifies the number of Celeborn master replicas to deploy, master replicas should not less than 3
-masterReplicas: 3
-# -- Specifies the number of Celeborn worker replicas to deploy, should less than node number
-workerReplicas: 5
-
 service:
   # -- Specifies service type
   type: ClusterIP
@@ -158,6 +153,9 @@ priorityClass:
     value: 999999000
 
 master:
+  # -- Number of Celeborn master replicas to deploy, should not less than 3.
+  replicas: 3
+
   # -- Annotations for Celeborn master pods.
   annotations:
     # key1: value1
@@ -215,6 +213,9 @@ master:
     #   effect: NoSchedule
 
 worker:
+  # -- Number of Celeborn worker replicas to deploy, should less than node number.
+  replicas: 5
+
   # -- Annotations for Celeborn worker pods.
   annotations:
     # key1: value1
