Add master.envFrom and worker.envFrom
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/charts/celeborn/templates/worker/statefulset.yaml
+++ b/charts/celeborn/templates/worker/statefulset.yaml
@@ -91,6 +91,10 @@ spec:
         env:
         {{- toYaml . | nindent 8 }}
         {{- end }}
+        {{- with .Values.worker.envFrom }}
+        envFrom:
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         volumeMounts:
         - mountPath: /opt/celeborn/conf
           name: {{ include "celeborn.fullname" . }}-volume
