--- a/charts/celeborn/values.yaml
+++ b/charts/celeborn/values.yaml
@@ -138,25 +138,6 @@ securityContext:
   # Specifies the group ID to use when modifying ownership and permissions of the mounted volumes
   fsGroup: 10006
 
-priorityClass:
-  # Priority class for Celeborn master pods
-  master:
-    # -- Specifies whether a new priority class for Celeborn master pods should be created
-    create: false
-    # -- Specifies the name of priority class for Celeborn master pods to be used (created if `create: true`), empty means `${Release.Name}-master-priority-class`
-    name: ""
-    # -- Specifies the integer value of this priority class, default is half of system-cluster-critical
-    value: 1000000000
-
-  # Priority class for Celeborn worker pods
-  worker:
-    # -- Specifies whether a new priority class for Celeborn worker pods should be created
-    create: false
-    # -- Specifies the name of priority class for Celeborn worker pods to be used (created if `create: true`), empty means `${Release.Name}-worker-priority-class`
-    name: ""
-    # -- Specifies the integer value of this priority class, default is Celeborn master value minus 1000
-    value: 999999000
-
 master:
   # -- Annotations for Celeborn master pods.
   annotations:
@@ -213,6 +194,15 @@ master:
     # - key: key2
     #   operator: Exists
     #   effect: NoSchedule
+
+  # Priority class for Celeborn master pods.
+  priorityClass:
+    # -- Specifies whether a new priority class for Celeborn master pods should be created.
+    create: false
+    # -- Specifies the name of priority class for Celeborn master pods to be used (created if `create: true`), empty means `${Release.Name}-master-priority-class`.
+    name: ""
+    # -- Specifies the integer value of this priority class, default is half of system-cluster-critical.
+    value: 1000000000
 
 worker:
   # -- Annotations for Celeborn worker pods.
@@ -272,6 +262,15 @@ worker:
     # - key: key2
     #   operator: Exists
     #   effect: NoSchedule
+
+  # Priority class for Celeborn worker pods.
+  priorityClass:
+    # -- Specifies whether a new priority class for Celeborn worker pods should be created
+    create: false
+    # -- Specifies the name of priority class for Celeborn worker pods to be used (created if `create: true`), empty means `${Release.Name}-worker-priority-class`
+    name: ""
+    # -- Specifies the integer value of this priority class, default is Celeborn master value minus 1000
+    value: 999999000
 
 podMonitor:
   # -- Specifies whether to enable creating pod monitors for Celeborn pods
