[CELEBORN-1981][HELM] Rename masterReplicas and workerReplicas to master.replicas and worker.replicas
### What changes were proposed in this pull request?

- Rename `masterReplicas` to `master.replicas`.
- Rename `workerReplicas` to `worker.replicas`.

### Why are the changes needed?

Unify the values naming by prefixing them with `master` or `worker`.

### Does this PR introduce _any_ user-facing change?

Yes.

### How was this patch tested?

`helm unittest charts/celeborn --file "tests/**/*_test.yaml" --strict --debug`.

Closes #3227 from ChenYi015/helm/replicas.

Authored-by: Yi Chen <github@chenyicn.net>
Signed-off-by: Cheng Pan <chengpan@apache.org>

--- a/charts/celeborn/tests/master/statefulset_test.yaml
+++ b/charts/celeborn/tests/master/statefulset_test.yaml
@@ -58,6 +58,15 @@ tests:
           path: spec.template.spec.containers[0].imagePullPolicy
           value: Always
 
+  - it: Should use the specified replicas if `master.replicas` is set
+    set:
+      master:
+        replicas: 10
+    asserts:
+      - equal:
+          path: spec.replicas
+          value: 10
+
   - it: Should add environment variables if `master.env` is set
     set:
       master:
@@ -289,11 +298,3 @@ tests:
       - equal:
           path: spec.template.spec.securityContext.fsGroup
           value: 3000
-
-  - it: Should use the specified replicas if `masterReplicas` is set
-    set:
-      masterReplicas: 10
-    asserts:
-      - equal:
-          path: spec.replicas
-          value: 10
