--- a/charts/celeborn/templates/master/statefulset.yaml
+++ b/charts/celeborn/templates/master/statefulset.yaml
@@ -22,6 +22,7 @@ metadata:
   labels:
     {{- include "celeborn.master.labels" . | nindent 4 }}
 spec:
+  replicas: {{ .Values.master.replicas }}
   serviceName: {{ include "celeborn.master.service.name" . }}
   selector:
     matchLabels:
@@ -72,7 +73,7 @@ spec:
         - -c
         {{- $namespace := .Release.Namespace }}
         - >
-          until {{ range until (.Values.masterReplicas | int) }}
+          until {{ range until (.Values.master.replicas | int) }}
           nslookup {{ include "celeborn.master.statefulSet.name" $ }}-{{ . }}.{{ include "celeborn.master.service.name" $ }}.{{ $namespace }}.svc.{{ $.Values.cluster.name }}.local &&
           {{- end }}
           true; do
@@ -151,4 +152,3 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       terminationGracePeriodSeconds: 30
-  replicas: {{ .Values.masterReplicas }}
