[CELEBORN-2014] updateInterruptionNotice REST API

--- a/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/worker_rest_v1.yaml
@@ -453,6 +453,13 @@ components:
         isDecommissioning:
           type: boolean
           description: The decommission status of the worker.
+        nextInterruptionNotice:
+          type: integer
+          format: int64
+          description: The next interruption notice of the worker.
+        networkLocation:
+          type: string
+          description: The network location of the worker.
       required:
         - host
         - rpcPort
@@ -555,6 +562,10 @@ components:
         networkLocation:
           type: string
           description: The network location of the worker.
+        nextInterruptionNotice:
+          type: integer
+          format: int64
+          description: The next interruption notice of the worker.
       required:
         - host
         - rpcPort
